[package]
authors = ["J David Smith <emallson@atlanis.net>"]
license = "BSD-3-Clause"
name = "ris"
version = "0.1.0"

[[bench]]
harness = false
name = "ris"

[dependencies]
as_num = "0.2.3"
bit-set = "0.4.0"
docopt = {version = "0.8.1", optional = true}
rand = "0.3.15"
rayon = "0.8"
serde = {version = "1.0.15", optional = true}
serde_derive = {version = "1.0.15", optional = true}

[dependencies.fnv]
optional = true
version = "1.0.5"

[dependencies.petgraph]
features = ["quickcheck"]
version = "0.4.7"

[dependencies.vec-graph]
git = "https://github.com/emallson/vec-graph.git"
branch = "hyper"
optional = false

[dev-dependencies]
bencher = "0.1.4"
lazy_static = "0.2.8"
quickcheck = "0.4.1"

[dev-dependencies.capngraph]
git = "https://github.com/emallson/capngraph.git"
optional = false

[dependencies.capngraph]
git = "https://github.com/emallson/capngraph.git"
optional = true

[dev-dependencies.rand-mersenne-twister]
git = "https://github.com/emallson/rust-mersenne-twister.git"
optional = false

[dependencies.rand-mersenne-twister]
git = "https://github.com/emallson/rust-mersenne-twister.git"
optional = true

[features]
hash = ["fnv"]
tools = ["docopt", "serde", "serde_derive", "capngraph", "rand-mersenne-twister"]

[profile]

[profile.bench]
debug = true
opt-level = 3

[[bin]]
name = "perf-test"
path = "tools/perf-test.rs"
required-features = ["tools"]
