[package]
authors = ["J David Smith <emallson@atlanis.net>"]
license = "BSD-3-Clause"
name = "ris"
version = "0.1.0"

[[bench]]
harness = false
name = "ris"
required-features = ["benchmark"]

[dependencies]
as_num = "0.2.3"
bit-set = "0.4.0"
rand = "0.3.15"
rayon = "0.8"

[dependencies.fnv]
optional = true
version = "1.0.5"

[dependencies.petgraph]
features = ["quickcheck"]
version = "0.4.7"

[dependencies.vec-graph]
git = "https://github.com/emallson/vec-graph.git"
optional = false

[dev-dependencies]
bencher = "0.1.4"
lazy_static = "0.2.8"
quickcheck = "0.4.1"

[dependencies.capngraph]
git = "https://github.com/emallson/capngraph.git"
optional = true

[dev-dependencies.rand-mersenne-twister]
git = "https://github.com/emallson/rust-mersenne-twister.git"
optional = false

[features]
hash = ["fnv"]
benchmark = ["capngraph"]

[profile.bench]
opt-level = 3
debug = true
